Public/centos.txt
Centos7下，安装Python3.6.5：

Step1.安装相关依赖包。

在终端下输入命令：sudoyum -y install zlib-devel bzip2-devel openssl-devel ncurses-devel sqlite-devel readline-devel tk-devel gdbm-devel db4-devel libpcap-devel xz-devel

Step2.使用wget从官网下载安装包。

在终端下输入命令：wget https://www.python.org/ftp/python/3.6.5/Python-3.6.5.tar.xz

Step3.解压安装包。
1）新建文件夹名字为python3,在终端下输入命令：mkdir python3

(2)将下载好的安装包解压至python3文件夹。

在终端下输入命令：tar -xf Python-3.6.5.tar.xz -C python3

Step4.编译安装。
（1）进入 Python-3.6.5目录，在终端中输入命令：cd python3/Python-3.6.5

（2）配置安装路径，在终端中输入命令：./configure --prefix=/home/python3

(3)安装，在终端中输入命令：make

之后，再输入命令：make install

Step5.创建python3的软链接。

（1）备份原文件为python2,在终端中输入命令：sudomv /usr/bin/python /usr/bin/python2

(2)创建软链接，在终端中输入命令：sudo ln -s /home/python3/bin/python3 /usr/bin/python

备份python2的pip为pip2,输入命令：sudo mv /usr/bin/pip /usr/bin/pip2

为python3的pip创建软链接，输入命令：sudo ln -s /home/python3/bin/pip3 /usr/bin/pip

Step6.python3.6测试

在终端输入命令：python

看到系统提示python3.6.5，证明此时我们已成功安装。


值得注意：因为在Centos中，yum源使用的是Python2.7，替换为Python3以后，yum源无法正常工作。所以我们需要修改yum配置文件。

首先，更改文件权限，在终端输入命令：sudo chmod 777 /usr/bin/yum

在终端输入命令：vi /usr/bin/yum 将#!/usr/bin/python 改为#!/usr/bin/python2.7


因为yum采用Python作为命令解释器，这可以从/usr/bin/yum文件中第一行#!/usr/bin/python发现。而python版本之间兼容性不太好，使得2.X版本与3.0版本之间存在语法不一致问题。而CentOS 7自带的yum采用的是python2.7，当系统将python升级到3.4后，出现语法解释错误。

解决办法：

一是升级yum。

二是修改yum的解释器为旧版本python2.7，即将连接文件/usr/bin/python连接回/usr/bin/python2.7。治标不治本，不推荐。

三是在设置里更改解释器设置，即修改/usr/bin/yum文件，指定使用python2.7作为yum的解释器：

1
# vi /usr/bin/yum
将第一行"#!/usr/bin/python" 改为 "#!/usr/bin/python2"即可。

 

安装软件时又会出现另一种报错

1
2
3
4
5
Downloading packages:
  File "/usr/libexec/urlgrabber-ext-down", line 28
    except OSError, e:
                  ^
SyntaxError: invalid syntax
问题与前面一个一样，因此解决办法也是一样的：

1
# vi /usr/libexec/urlgrabber-ext-down
将第一行"#!/usr/bin/python" 改为 "#!/usr/bin/python2"即可。
###########################################################################
centos7 使用nmon简要


下载：
nmon安装包：
http://nmon.sourceforge.net/pmwiki.php?n=Site.Download
选择适合自己系统的版本
centos7_x86_64适合的最新nmon版本为：
nmon16e_mpginc.tar.gz 3.5MB

nmon_analyser工具：
https://www.ibm.com/developerworks/community/wikis/home?lang=en#!/wiki/Power+Systems/page/nmon_analyser
下载后直接解压出模板（nmon analyser v51_2.xlsm），用于最后制图

 安装：

1.nmon安装

解压安装包 将nmon_x86_64_centos7文件重命名为nmon 修改权限为777

然后移动到/usr/bin 目录下，无需再添加环境变量 （重启系统后，任何环境下直接输入nmon即可运行nmon）

2.nmon analyser安装

在Windows下解压压缩包，保留nmon analyser v51_2.xlsm文件即可

使用：

1).采集数据：
#nmon -s10 -c60 -f -m /home/

参数解释：
-s10 每 10 秒采集一次数据。
-c60 采集 60 次，即为采集十分钟的数据。
-f 生成的数据文件名中包含文件创建的时间。
-m 生成的数据文件的存放目录

可以通过命令看到nmon在后台运行
# ps -ef|grep nmon

2）结果处理
nmon 输出文件的命名方式为：服务器名_日期时间.nmon
如：localhost_170616_0138.nmon

通过以下命令，将.nmon文件转化成.csv文件，在当前目录生成对应的.csv文件
sort localhost_170616_0138.nmon>localhost_170616_0138.csv

 


通过nmon analyser工具（nmon analyser v51_2.xlsm）将CSV文件转化为excel文件

nmon analyser直接解压到Windows上，保留.xlsm文件即可
在nmon analyser v51_2.xlsm中添加nmon数据打开CSV文件即可转换成Excel文件

nmon analyser v51_2.xlsm基于宏 WPS没有宏
Windows 必须安装Microsoft office